syntax = "proto3";

package detector.api.v1;

service DetectorAPI {
  rpc DetectFrame(DetectFrameRequest) returns (DetectFrameResponse) {};
}

message DetectFrameRequest {
  bytes frame = 1;
}

message Detection {
  string label = 1;
  float confidence = 2;
  float x1 = 3;
  float y1 = 4;
  float x2 = 5;
  float y2 = 6;
}

message DetectFrameResponse {
  repeated Detection detections = 1;
}
